# presidio

./: .gitignore
ilsp-athenarc-asep-anonymizer/: .gitignore  README.md  app.py  logging.ini  pyproject.toml
ilsp-athenarc-asep-anonymizer/ilsp_athenarc_asep_anonymizer/: celery.py  pii_anonymizer.py  resources.json  utils.py
ilsp-athenarc-asep-anonymizer/ilsp_athenarc_asep_anonymizer/anonymizers/: custom_replace.py
ilsp-athenarc-asep-anonymizer/ilsp_athenarc_asep_anonymizer/recognizers/: el_address_recognizer.py  el_phone_recognizer.py
ilsp-athenarc-asep-anonymizer/notebooks/: argilla_interact_with_datasets.ipynb  pii_anonymizer.ipynb  process_data.ipynb  synthetic_data_generation_example.ipynb
ilsp-athenarc-asep-anonymizer/tests/resources/: example_text.txt  example_text_2.txt  examples.txt
