[tool.poetry]
name = "ilsp-athenarc-asep-anonymizer"
version = "0.1.0"
description = ""
authors = ["Prokopis Prokopidis <prokopis@athenarc.gr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
presidio-anonymizer = "^2.2.358"
presidio-analyzer = "^2.2.358"
faker = "^37.1.0"
stanza = "^1.10.1"
argparse = "^1.4.0"
fastapi = "^0.115.12"
uvicorn = "^0.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
