[tool.poetry]
name = "ilsp-athenarc-asep-anonymizer"
version = "0.1.0"
description = ""
authors = ["Prokopis Prokopidis <prokopis@athenarc.gr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
presidio-anonymizer = "^2.2.358"
presidio-analyzer = "^2.2.358"
faker = "^37.1.0"
stanza = "^1.10.1"
argparse = "^1.4.0"
fastapi = "^0.115.12"
uvicorn = "^0.34.0"
pytest-mock = "^3.14.0"
regex = "^2024.11.6"
pandas = "^2.2.3"
ipykernel = "^6.29.5"
dotenv = "^0.9.9"
celery = {extras = ["redis"], version = "^5.5.2"}
flower = "^2.0.1"
flair = "^0.15.1"
seaborn = "^0.13.2"
ipywidgets = "^8.1.7"
itables = "^2.3.0"
argilla = "^2.8.0"
datasets = "^3.6.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
